Better, auto-refreshing system status (#258)
* Better, auto-refreshing system status

* Add tslint to the mix, and also make flake8 ignore node_modules for my sanity

* More tslinting, don't return view representations in the api

* Explicit scss-lint control

* Make authenticated xhr calls
