# natlas-server/app/api/routes.py
@@ -10,6 +10,7 @@ from app.api.processing.ssl import parse_ssl_data
 from app.api.rescan_handler import mark_scan_dispatched, mark_scan_completed
 from libnmap.parser import NmapParser, NmapParserException
 from app.auth.wrappers import isAgentAuthenticated, isAuthenticated
+from app.util import pretty_time_delta
 
 
 json_content = 'application/json'
@@ -173,15 +174,21 @@ def natlasServices():
 @isAuthenticated
 def status():
 	last_cycle_start = current_app.ScopeManager.get_last_cycle_start()
+	completed_cycles = current_app.ScopeManager.get_completed_cycle_count()
+	avg_cycle_time = None
 	if last_cycle_start:
 		scans_this_cycle = current_app.elastic.count_scans_since(last_cycle_start)
+		if completed_cycles > 0:
+			delta = (last_cycle_start - current_app.ScopeManager.init_time) / completed_cycles
+			avg_cycle_time = pretty_time_delta(delta)
 	else:
 		scans_this_cycle = 0
 	payload = {
 		'natlas_start_time': current_app.ScopeManager.init_time,
 		'cycle_start_time': last_cycle_start,
-		'completed_cycles': current_app.ScopeManager.get_completed_cycle_count(),
+		'completed_cycles': completed_cycles,
 		'scans_this_cycle': scans_this_cycle,
-		'effective_scope_size': current_app.ScopeManager.get_effective_scope_size()
+		'effective_scope_size': current_app.ScopeManager.get_effective_scope_size(),
+		'avg_cycle_duration': avg_cycle_time
 	}
 	return jsonify(payload)
